--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@luctc/template-builder": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -21,8 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "precommit": "lint-staged",
-    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ",
+    "lint-staged": "lint-staged",
+    "lint": "npx eslint --fix --ext .js,.jsx,.ts,.tsx ",
     "format": "npx prettier --check --write src//**/*.{ts,tsx,json} "
   },
   "lint-staged": {
@@ -48,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3"
   }
 }
