--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint-staged": "lint-staged",
-    "lint": "npx eslint --fix --ext .js,.jsx,.ts,.tsx ",
+    "lint": "npx eslint  --ext .js,.jsx,.ts,.tsx ",
     "format": "npx prettier --check --write src//**/*.{ts,tsx,json} "
   },
   "lint-staged": {
